# fastapi-ddd

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/application/dtos/: usuario_dto.py
src/application/use_cases/: usuario_use_cases.py
src/config/: database.py  settings.py
src/domain/entities/: usuario.py
src/domain/exceptions/: domain_exceptions.py
src/domain/repositories/: usuario_repository_interface.py
src/infrastructure/auth/: jwt_handler.py
src/infrastructure/database/models/: usuario_model.py
src/infrastructure/database/repositories/: usuario_repository.py
src/presentation/api/: dependencies.py  error_handlers.py
src/presentation/api/routers/: usuario_router.py
tests/: conftest.py
tests/unit/domain/: test_usuario_entity.py
